--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;600&display=swap');
+@import 'swiper/swiper-bundle.css';
 
 *{
     margin: 0;
@@ -9,3 +10,4 @@
     box-sizing: border-box;
     overflow-x: hidden;
   }
+  
