--- a/app/globals.css
+++ b/app/globals.css
@@ -2,9 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;600&display=swap');
-@import 'swiper/swiper-bundle.css';
 
-*{
+.edit{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
